# devai-context-engine

./: .gitignore  .goreleaser.yaml  DOCS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
docs/: 01-introduction.md  02-architecture.md  04-agent-workflow.md  06-extending-the-system.md  07-performance.md  08-design-decisions.md  api.md  architecture.md  features.md  mcp-tools.md  (+2 more)
ml/: pyproject.toml
ml/devai_ml/: __init__.py  server.py
ml/devai_ml/chunking/: semantic_chunker.py
ml/devai_ml/embeddings/: base.py  custom.py  factory.py  local.py  openai_embed.py  voyage_embed.py
ml/devai_ml/parsers/: base.py  raw_parser.py  registry.py  treesitter_parser.py
ml/devai_ml/parsers/queries/go/: calls.scm  imports.scm  symbols.scm
ml/devai_ml/parsers/queries/java/: calls.scm  imports.scm  symbols.scm
ml/devai_ml/parsers/queries/javascript/: calls.scm  exports.scm  imports.scm  symbols.scm
ml/devai_ml/parsers/queries/php/: calls.scm  imports.scm  symbols.scm
ml/devai_ml/parsers/queries/python/: calls.scm  imports.scm  symbols.scm
ml/devai_ml/parsers/queries/rust/: calls.scm  imports.scm  symbols.scm
ml/devai_ml/parsers/queries/typescript/: calls.scm  exports.scm  imports.scm  symbols.scm
ml/devai_ml/pipeline/: git_state.py  orchestrator.py
ml/devai_ml/stores/: __init__.py  factory.py  graph_store.py  hybrid_store.py  index_state.py  memory_store.py  qdrant_store.py  vector_store.py
ml/tests/: test_chunker.py  test_factory.py  test_hybrid_store.py  test_parsers.py  test_push_pull.py  test_qdrant_store.py  test_stores.py
(+61 files in other folders)
